--- a/mode.css
+++ b/mode.css
@@ -13,7 +13,7 @@ div[class^="Channels_container"]{
 }
 
 div[class^="ScrollableComponent_container"]{
-  margin-left:0px!important;
+  margin-left:0!important;
 }
 
 div[class^="StreamPage_stream"]{
@@ -21,7 +21,7 @@ div[class^="StreamPage_stream"]{
 }
 
 div[class^="StreamPage_chatToggler"]{
-  border-top:0px solid transparent!important;
+  border-top:0 solid transparent!important;
   top:0!important;
 }
 
